Finished HTML tags

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>HTMLtags</title>
 </head>
 <body>
-    <div class="Paragraph" id=Food >
+    <div class="Paragraph" id=Food > 
+        <hr> 
     <h1>I Love Eating Food</h1>
     <p>
         I mean who doesn't love eating, right? One of my favorite foods to eat is <a href="https://en.wikipedia.org/wiki/Shashlik"><i><b>Shashlik</b></i></a>! 
@@ -21,14 +22,35 @@
             <li>Pilau</li>
         </ul>
     </p>
+</div>
     <img src=https://media1.fdncms.com/metrotimes/imager/u/magnum/11499901/al-ameer-kebab-paltter.jpg>
+     <div class="Paragraph" id="Games">
     <h2>I Love Games</h2>
     <p>
         <b><i>Some of my favorite games are <a href="http://listmoz.com/view/6Lfff5n8pX9ZqBVLyN4/"></i></b>THELISTOFGAMES</a>. 
         I've been playing video games ever since I was a little kid. 
-        It's one of the reasons why I wanted to become a software engineer. 
+        It's one of the reasons why I wanted to become a software engineer.
+        <section>
+        <ol>
+            <li>GOD of WAR</li>
+            <li>Devil May Cry</li>
+            <li>Mortal Kombat</li>
+            <li>Splinter Cell</li>
+            <li>Sonic</li>
+            <li>Midnight Club</li>
+        </ol>
+        </section>
     </p>
+    
     <img src=https://images-na.ssl-images-amazon.com/images/I/51pY8rnKypL._SX302_BO1,204,203,200_.jpg>
         </div>
+        <hr>
+        <footer>
+        &copy; Copyright 2019
+        <details>
+            <summary>2001-2019</summary>
+            <p>Made By Ybrayym Abamov. Belongs To The Internet.</p>
+        </details>
+        </footer>
     </body>
 </html>
